[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
dialoguer = "0.10.4"
either = "1.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
read_input = "0.8.6"
terminal_size = "0.2.6"
